Roadmap redesign: Past/Now/Future + leader lines + larger viewBox; improve label clarity (both dashchat pages)

--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -129,7 +129,7 @@
       
       <div style="margin: 1.5em 0 0.5em 0; font-weight: 600;">Roadmap</div>
       <div style="overflow-x: auto; -webkit-overflow-scrolling: touch; border: 1px solid #e5e7eb; border-radius: 8px; padding: 12px; background: #fff;">
-        <svg viewBox="0 0 1200 460" width="100%" height="auto" role="img" aria-label="Dash Chat roadmap">
+        <svg viewBox="0 0 1200 560" width="100%" height="auto" role="img" aria-label="Dash Chat roadmap">
           <defs>
             <style>
               .rm-label { font: 14px 'Rubik', sans-serif; fill: #111; }
@@ -141,114 +141,128 @@
           <!-- baseline -->
           <line x1="60" y1="220" x2="1140" y2="220" stroke="#d1d5db" stroke-width="5" />
 
-          <!-- major stages: Pre-Alpha, Alpha, Beta -->
-          <!-- Pre-Alpha -->
-          <line x1="180" y1="220" x2="180" y2="150" stroke="#1D4ED8" stroke-width="2" />
-          <circle cx="180" cy="220" r="18" fill="none" stroke="#1D4ED8" stroke-width="6" opacity="0.15" />
-          <circle cx="180" cy="220" r="11" fill="#1D4ED8" />
-          <g transform="translate(180,140) rotate(-24)">
-            <text class="rm-label" text-anchor="middle">Pre-Alpha — Now → you are here</text>
+          <!-- major stages: Past, Now, Future -->
+          <!-- Past -->
+          <line x1="180" y1="220" x2="180" y2="150" stroke="#6b7280" stroke-width="2" />
+          <circle cx="180" cy="220" r="11" fill="#6b7280" />
+          <g transform="translate(180,140) rotate(-18)">
+            <text class="rm-label" text-anchor="middle">Past</text>
           </g>
 
-          <!-- Alpha -->
-          <line x1="600" y1="220" x2="600" y2="150" stroke="#F59E0B" stroke-width="2" />
-          <circle cx="600" cy="220" r="11" fill="#F59E0B" />
-          <g transform="translate(600,140) rotate(-24)">
-            <text class="rm-label" text-anchor="middle">Alpha — early 2026</text>
+          <!-- Now -->
+          <line x1="600" y1="220" x2="600" y2="150" stroke="#1D4ED8" stroke-width="2" />
+          <circle cx="600" cy="220" r="18" fill="none" stroke="#1D4ED8" stroke-width="6" opacity="0.15" />
+          <circle cx="600" cy="220" r="11" fill="#1D4ED8" />
+          <g transform="translate(600,140) rotate(-18)">
+            <text class="rm-label" text-anchor="middle">Now — you are here</text>
           </g>
 
-          <!-- Beta -->
+          <!-- Future -->
           <line x1="1000" y1="220" x2="1000" y2="150" stroke="#10B981" stroke-width="2" />
           <circle cx="1000" cy="220" r="11" fill="#10B981" />
-          <g transform="translate(1000,140) rotate(-24)">
-            <text class="rm-label" text-anchor="middle">Beta — later 2026</text>
+          <g transform="translate(1000,140) rotate(-18)">
+            <text class="rm-label" text-anchor="middle">Future</text>
           </g>
 
           <!-- Pre-Alpha items (left cluster) -->
           <!-- Checked items -->
           <g>
             <line x1="90" y1="220" x2="90" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <line x1="90" y1="260" x2="70" y2="300" stroke="#9ca3af" stroke-width="1" />
             <circle cx="90" cy="220" r="4" fill="#059669" />
-            <g transform="translate(90,300) rotate(-24)">
+            <g transform="translate(70,320) rotate(-18)">
               <text class="rm-label-small rm-checked" text-anchor="middle">✓ Community needs assessment / User research / Contextual research</text>
             </g>
 
             <line x1="120" y1="220" x2="120" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <line x1="120" y1="260" x2="110" y2="300" stroke="#9ca3af" stroke-width="1" />
             <circle cx="120" cy="220" r="4" fill="#059669" />
-            <g transform="translate(120,300) rotate(-24)">
+            <g transform="translate(110,320) rotate(-18)">
               <text class="rm-label-small rm-checked" text-anchor="middle">✓ Secure ephemeral relay service</text>
             </g>
 
             <line x1="150" y1="220" x2="150" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <line x1="150" y1="260" x2="160" y2="300" stroke="#9ca3af" stroke-width="1" />
             <circle cx="150" cy="220" r="4" fill="#059669" />
-            <g transform="translate(150,300) rotate(-24)">
+            <g transform="translate(160,320) rotate(-18)">
               <text class="rm-label-small rm-checked" text-anchor="middle">✓ Push notifications</text>
             </g>
 
             <line x1="180" y1="220" x2="180" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <line x1="180" y1="260" x2="200" y2="300" stroke="#9ca3af" stroke-width="1" />
             <circle cx="180" cy="220" r="4" fill="#059669" />
-            <g transform="translate(180,300) rotate(-24)">
+            <g transform="translate(200,320) rotate(-18)">
               <text class="rm-label-small rm-checked" text-anchor="middle">✓ p2p networking integration</text>
             </g>
 
             <line x1="210" y1="220" x2="210" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <line x1="210" y1="260" x2="240" y2="300" stroke="#9ca3af" stroke-width="1" />
             <circle cx="210" cy="220" r="4" fill="#059669" />
-            <g transform="translate(210,300) rotate(-24)">
+            <g transform="translate(240,320) rotate(-18)">
               <text class="rm-label-small rm-checked" text-anchor="middle">✓ Linked devices</text>
             </g>
 
             <line x1="240" y1="220" x2="240" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <line x1="240" y1="260" x2="270" y2="300" stroke="#9ca3af" stroke-width="1" />
             <circle cx="240" cy="220" r="4" fill="#059669" />
-            <g transform="translate(240,300) rotate(-24)">
+            <g transform="translate(270,320) rotate(-18)">
               <text class="rm-label-small rm-checked" text-anchor="middle">✓ Android, Mac, Linux, Windows</text>
             </g>
 
             <line x1="270" y1="220" x2="270" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <line x1="270" y1="260" x2="300" y2="300" stroke="#9ca3af" stroke-width="1" />
             <circle cx="270" cy="220" r="4" fill="#059669" />
-            <g transform="translate(270,300) rotate(-24)">
+            <g transform="translate(300,320) rotate(-18)">
               <text class="rm-label-small rm-checked" text-anchor="middle">✓ Google Play Store (alpha)</text>
             </g>
 
             <!-- Upcoming in Pre-Alpha -->
             <line x1="300" y1="220" x2="300" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <line x1="300" y1="260" x2="330" y2="300" stroke="#9ca3af" stroke-width="1" />
             <circle cx="300" cy="220" r="4" fill="#374151" />
-            <g transform="translate(300,300) rotate(-24)">
+            <g transform="translate(330,320) rotate(-18)">
               <text class="rm-label-small" text-anchor="middle">UI/UX design</text>
             </g>
 
             <line x1="330" y1="220" x2="330" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <line x1="330" y1="260" x2="360" y2="300" stroke="#9ca3af" stroke-width="1" />
             <circle cx="330" cy="220" r="4" fill="#374151" />
-            <g transform="translate(330,300) rotate(-24)">
+            <g transform="translate(360,320) rotate(-18)">
               <text class="rm-label-small" text-anchor="middle">Usability testing</text>
             </g>
 
             <line x1="360" y1="220" x2="360" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <line x1="360" y1="260" x2="390" y2="300" stroke="#9ca3af" stroke-width="1" />
             <circle cx="360" cy="220" r="4" fill="#374151" />
-            <g transform="translate(360,300) rotate(-24)">
+            <g transform="translate(390,320) rotate(-18)">
               <text class="rm-label-small" text-anchor="middle">Visual identity</text>
             </g>
 
             <line x1="390" y1="220" x2="390" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <line x1="390" y1="260" x2="420" y2="300" stroke="#9ca3af" stroke-width="1" />
             <circle cx="390" cy="220" r="4" fill="#374151" />
-            <g transform="translate(390,300) rotate(-24)">
+            <g transform="translate(420,320) rotate(-18)">
               <text class="rm-label-small" text-anchor="middle">Bluetooth</text>
             </g>
 
             <line x1="420" y1="220" x2="420" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <line x1="420" y1="260" x2="450" y2="300" stroke="#9ca3af" stroke-width="1" />
             <circle cx="420" cy="220" r="4" fill="#374151" />
-            <g transform="translate(420,300) rotate(-24)">
+            <g transform="translate(450,320) rotate(-18)">
               <text class="rm-label-small" text-anchor="middle">iOS</text>
             </g>
 
             <line x1="450" y1="220" x2="450" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <line x1="450" y1="260" x2="480" y2="300" stroke="#9ca3af" stroke-width="1" />
             <circle cx="450" cy="220" r="4" fill="#374151" />
-            <g transform="translate(450,300) rotate(-24)">
+            <g transform="translate(480,320) rotate(-18)">
               <text class="rm-label-small" text-anchor="middle">Group invite links</text>
             </g>
 
             <line x1="480" y1="220" x2="480" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <line x1="480" y1="260" x2="510" y2="300" stroke="#9ca3af" stroke-width="1" />
             <circle cx="480" cy="220" r="4" fill="#374151" />
-            <g transform="translate(480,300) rotate(-24)">
+            <g transform="translate(510,320) rotate(-18)">
               <text class="rm-label-small" text-anchor="middle">Routing messages in/out of shutdown zones</text>
             </g>
           </g>
@@ -307,50 +321,58 @@
           <!-- Beta items (right cluster) -->
           <g>
             <line x1="940" y1="220" x2="940" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <line x1="940" y1="260" x2="920" y2="300" stroke="#9ca3af" stroke-width="1" />
             <circle cx="940" cy="220" r="4" fill="#374151" />
-            <g transform="translate(940,300) rotate(-24)">
+            <g transform="translate(920,320) rotate(-18)">
               <text class="rm-label-small rm-muted" text-anchor="middle">Targets</text>
             </g>
 
             <line x1="970" y1="220" x2="970" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <line x1="970" y1="260" x2="950" y2="300" stroke="#9ca3af" stroke-width="1" />
             <circle cx="970" cy="220" r="4" fill="#374151" />
-            <g transform="translate(970,300) rotate(-24)">
+            <g transform="translate(950,320) rotate(-18)">
               <text class="rm-label-small" text-anchor="middle">Raspberry Pi always-online nodes</text>
             </g>
 
             <line x1="1000" y1="220" x2="1000" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <line x1="1000" y1="260" x2="1000" y2="300" stroke="#9ca3af" stroke-width="1" />
             <circle cx="1000" cy="220" r="4" fill="#374151" />
-            <g transform="translate(1000,300) rotate(-24)">
+            <g transform="translate(1000,320) rotate(-18)">
               <text class="rm-label-small" text-anchor="middle">Emergency relay / Local mode</text>
             </g>
 
             <line x1="1030" y1="220" x2="1030" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <line x1="1030" y1="260" x2="1050" y2="300" stroke="#9ca3af" stroke-width="1" />
             <circle cx="1030" cy="220" r="4" fill="#374151" />
-            <g transform="translate(1030,300) rotate(-24)">
+            <g transform="translate(1050,320) rotate(-18)">
               <text class="rm-label-small" text-anchor="middle">Voice messages</text>
             </g>
 
             <line x1="1060" y1="220" x2="1060" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <line x1="1060" y1="260" x2="1090" y2="300" stroke="#9ca3af" stroke-width="1" />
             <circle cx="1060" cy="220" r="4" fill="#374151" />
-            <g transform="translate(1060,300) rotate(-24)">
+            <g transform="translate(1090,320) rotate(-18)">
               <text class="rm-label-small" text-anchor="middle">File sharing</text>
             </g>
 
             <line x1="1090" y1="220" x2="1090" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <line x1="1090" y1="260" x2="1120" y2="300" stroke="#9ca3af" stroke-width="1" />
             <circle cx="1090" cy="220" r="4" fill="#374151" />
-            <g transform="translate(1090,300) rotate(-24)">
+            <g transform="translate(1120,320) rotate(-18)">
               <text class="rm-label-small" text-anchor="middle">Security features (disappearing messages, hidden chats, etc.)</text>
             </g>
 
             <line x1="1120" y1="220" x2="1120" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <line x1="1120" y1="260" x2="1150" y2="300" stroke="#9ca3af" stroke-width="1" />
             <circle cx="1120" cy="220" r="4" fill="#374151" />
-            <g transform="translate(1120,300) rotate(-24)">
+            <g transform="translate(1150,320) rotate(-18)">
               <text class="rm-label-small" text-anchor="middle">Apple App Store</text>
             </g>
 
             <line x1="1150" y1="220" x2="1150" y2="260" stroke="#9ca3af" stroke-width="1.5" />
+            <line x1="1150" y1="260" x2="1180" y2="300" stroke="#9ca3af" stroke-width="1" />
             <circle cx="1150" cy="220" r="4" fill="#374151" />
-            <g transform="translate(1150,300) rotate(-24)">
+            <g transform="translate(1180,320) rotate(-18)">
               <text class="rm-label-small" text-anchor="middle">Field usability testing (offline, secure backups, encryptions)</text>
             </g>
           </g>
