Roadmap: simplify to vertical text sections (Past, Present, Future) with Alpha/Beta under Future on both Dash Chat pages

--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -129,7 +129,58 @@
       
       <div style="margin: 1.5em 0 0.5em 0; font-weight: 600;">Roadmap</div>
       <div style="overflow-x: auto; -webkit-overflow-scrolling: touch; border: 1px solid #e5e7eb; border-radius: 8px; padding: 12px; background: #fff;">
-        <svg viewBox="0 0 1200 560" width="100%" height="auto" role="img" aria-label="Dash Chat roadmap">
+        <svg viewBox="0 0 0 0" width="0" height="0" role="img" aria-label="Dash Chat roadmap" style="display:none"></svg>
+      </div>
+      <div style="border: 1px solid #e5e7eb; border-radius: 8px; padding: 16px; background: #fff; display: grid; gap: 16px;">
+        <div>
+          <div style="font-weight: 600; color: #6b7280; margin-bottom: 6px;">Past</div>
+          <ul style="margin: 0; padding-left: 20px; line-height: 1.55;">
+            <li>Community needs assessment / User research / Contextual research</li>
+            <li>Secure ephemeral relay service</li>
+            <li>Push notifications</li>
+            <li>p2p networking integration</li>
+            <li>Linked devices</li>
+            <li>Android, Mac, Linux, Windows</li>
+            <li>Google Play Store (alpha)</li>
+            <li style="margin-top: 6px; font-weight: 600; color: #1D4ED8;">Pre‑Alpha complete</li>
+          </ul>
+        </div>
+        <div>
+          <div style="font-weight: 600; color: #1D4ED8; margin-bottom: 6px;">Present</div>
+          <ul style="margin: 0; padding-left: 20px; line-height: 1.55;">
+            <li>UI/UX design</li>
+            <li>Usability testing</li>
+            <li>Visual identity</li>
+            <li>Bluetooth</li>
+            <li>iOS</li>
+            <li>Group invite links</li>
+            <li>Routing messages in and out of shutdown zones</li>
+          </ul>
+        </div>
+        <div>
+          <div style="font-weight: 600; color: #10B981; margin-bottom: 6px;">Future</div>
+          <div style="font-weight: 500; color: #6b7280; margin-bottom: 4px;">Alpha — early 2026</div>
+          <ul style="margin: 0 0 10px 0; padding-left: 20px; line-height: 1.55;">
+            <li>Bluetooth</li>
+            <li>iOS</li>
+            <li>Group invite links</li>
+            <li>Routing messages in and out of shutdown zones</li>
+            <li>UI/UX design</li>
+            <li>Usability testing</li>
+            <li>Visual identity</li>
+          </ul>
+          <div style="font-weight: 500; color: #6b7280; margin-bottom: 4px;">Beta — later 2026</div>
+          <ul style="margin: 0; padding-left: 20px; line-height: 1.55;">
+            <li>Raspberry Pi always‑online nodes</li>
+            <li>Emergency relay / Local mode</li>
+            <li>Voice messages</li>
+            <li>File sharing</li>
+            <li>Security features (disappearing messages, hidden chats, etc.)</li>
+            <li>Apple App Store</li>
+            <li>Field usability testing (offline, secure backups, encryptions)</li>
+          </ul>
+        </div>
+      </div>
           <defs>
             <style>
               .rm-label { font: 14px 'Rubik', sans-serif; fill: #111; }
