--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -135,27 +135,27 @@
         </svg>
         Roadmap
       </h3>
-      <div style="display:flex; flex-wrap: wrap; gap: 8px; align-items:center; margin-bottom: 10px;">
-        <div style="display:inline-flex; align-items:center; gap:6px; padding:6px 10px; border:1px solid #d1d5db; border-radius:999px; background:#f8fafc;">
+      <div style="display:flex; flex-wrap: wrap; gap: 10px; align-items:center; margin-bottom: 12px;">
+        <div style="display:inline-flex; align-items:center; gap:8px; padding:10px 14px; border:none; border-radius:8px; background:#eff6ff;">
           <span style="font-weight:600;">Pre‑Alpha</span>
           <span style="display:inline-flex; align-items:center; gap:4px; color:#1D4ED8; font-weight:600;">
             <svg width="14" height="14" viewBox="0 0 20 20" aria-hidden="true"><path d="M4 10h10M10 4l6 6-6 6" fill="none" stroke="#1D4ED8" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
             Now
           </span>
         </div>
-        <div style="display:inline-flex; align-items:center; gap:6px; padding:6px 10px; border:1px solid #d1d5db; border-radius:999px; background:#fff;">
+        <div style="display:inline-flex; align-items:center; gap:8px; padding:10px 14px; border:none; border-radius:8px; background:#fff7ed;">
           <span style="font-weight:600;">Alpha</span>
           <span style="color:#6b7280;">Late 2026</span>
         </div>
-        <div style="display:inline-flex; align-items:center; gap:6px; padding:6px 10px; border:1px solid #d1d5db; border-radius:999px; background:#fff;">
+        <div style="display:inline-flex; align-items:center; gap:8px; padding:10px 14px; border:none; border-radius:8px; background:#ecfdf5;">
           <span style="font-weight:600;">Beta</span>
           <span style="color:#6b7280;">Mid 2026</span>
         </div>
       </div>
       <div style="border: 1px solid #e5e7eb; border-radius: 8px; padding: 16px; background: #fff; display: grid; gap: 18px;">
         <div>
-          <div style="font-weight: 700; color: #374151; display:flex; align-items:center; gap:6px; margin-bottom: 6px;">
-            <svg width="16" height="16" viewBox="0 0 20 20" aria-hidden="true"><circle cx="6" cy="6" r="5" fill="#6b7280"/><rect x="11" y="11" width="7" height="7" fill="#d1d5db"/></svg>
+          <div style="font-weight: 700; color: #F59E0B; display:flex; align-items:center; gap:6px; margin-bottom: 6px;">
+            <svg width="16" height="16" viewBox="0 0 20 20" aria-hidden="true"><circle cx="6" cy="6" r="5" fill="#F59E0B"/><rect x="11" y="11" width="7" height="7" fill="#FCD34D"/></svg>
             Past
           </div>
           <ul style="margin: 0; padding-left: 20px; line-height: 1.55;">
