Roadmap content: split bullets and add small-caption lines for shutdown bridging and security features (both pages)

--- a/dashchat.html
+++ b/dashchat.html
@@ -116,7 +116,8 @@
             Past
           </div>
           <ul style="margin: 0; padding-left: 20px; line-height: 1.55;">
-            <li>Community needs assessment / User research / Contextual research</li>
+            <li>User research</li>
+            <li>Community needs assessment</li>
             <li>Secure ephemeral relay service</li>
             <li>Push notifications</li>
             <li>p2p networking integration</li>
@@ -140,7 +141,7 @@
             <li>Bluetooth</li>
             <li>iOS (beta version), Windows</li>
             <li>Group invite links</li>
-            <li>Routing messages in and out of shutdown zones (Starlink, satellite, etc)</li>
+            <li>Bridging between shutdowns and internet<div style="font-size: 0.9em; color: #6b7280;">Starlink, satellite, etc.</div></li>
           </ul>
         </div>
         <div>
@@ -153,7 +154,7 @@
             <li>Build and field-test prototype</li>
             <li>Voice messages</li>
             <li>File sharing</li>
-            <li>Security features (disappearing messages, hidden chats, etc)</li>
+            <li>Security features<div style="font-size: 0.9em; color: #6b7280;">disappearing messages, hidden chats, etc.</div></li>
             <li>Apple App Store</li>
           </ul>
         </div>
