Roadmap: add 'Community Governance' and 'Community Partners' to In progress (both pages)

--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -181,6 +181,8 @@
             <li>Visual identity</li>
             <li>Publish research report</li>
             <li>Community testing</li>
+            <li>Community Governance</li>
+            <li>Community Partners</li>
             <li>Bluetooth</li>
             <li>iOS (beta version), Windows</li>
             <li>Group invite links</li>
