Roadmap Future: add localization, Raspberry Pi relay nodes, and alternative networks research (both pages)

--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -201,6 +201,9 @@
             <li>File sharing</li>
             <li>Security features<div style="font-size: 0.9em; color: #6b7280;">disappearing messages, hidden chats, etc.</div></li>
             <li>Apple App Store</li>
+            <li>Localize app in more languages</li>
+            <li>Raspberry pi relay nodes</li>
+            <li>research alternative networks<div style="font-size: 0.9em; color: #6b7280;">Ham radio, riticulum, WiFi aware, etc.</div></li>
           </ul>
         </div>
       </div>
