Supported by: move to bottom as its own section with icon (both Dash Chat pages)

--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -85,11 +85,7 @@
         With internet shutdowns increasing worldwide, secure and reliable communication without dependence on stable internet is becoming ever more essential.
       </p>
 
-      <div style="text-align: center; margin: 2em 0 1em 0;">
-        <div style="font-weight: bold; margin-bottom: 0.5em;">Supported by</div>
-        <img src="otf-logo.webp" alt="OTF UXD Lab Logo" style="max-width: 180px; width: 100%; height: auto; display: block; margin: 0 auto 1em auto;" />
-
-      </div>
+      
       <h3 style="font-family: 'Rubik', sans-serif; font-size: 1.3em; font-weight: 500; margin: 2em 0 1em 0; display: flex; align-items: center; gap: 0.5em;">
         <svg width="20" height="20" viewBox="0 0 20 20" aria-hidden="true" focusable="false">
           <circle cx="6" cy="6" r="5" fill="#1D4ED8"/>
@@ -151,6 +147,17 @@
           <span style="font-weight:600;">Beta</span>
           <span style="color:#6b7280;">Mid 2026</span>
         </div>
+      </div>
+      
+      <h3 style="font-family: 'Rubik', sans-serif; font-size: 1.3em; font-weight: 500; margin: 2em 0 1em 0; display: flex; align-items: center; gap: 0.5em;">
+        <svg width="20" height="20" viewBox="0 0 20 20" aria-hidden="true" focusable="false">
+          <circle cx="6" cy="6" r="5" fill="#1D4ED8"/>
+          <rect x="12" y="10" width="6" height="6" fill="#F59E0B"/>
+        </svg>
+        Supported by
+      </h3>
+      <div style="text-align: center; margin: 0 0 2em 0;">
+        <img src="otf-logo.webp" alt="OTF UXD Lab Logo" style="max-width: 200px; width: 100%; height: auto; display: block; margin: 0 auto;" />
       </div>
       <div style="border: 1px solid #e5e7eb; border-radius: 8px; padding: 16px; background: #fff; display: grid; gap: 18px;">
         <div>
