Pre‑Alpha sticker: absolutely position next to title for consistent placement (both pages)

--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -103,9 +103,9 @@
     </header>
 
     <rocket-content-area>
-      <h1 style="font-family: 'Rubik', sans-serif; font-size: 1.8em; font-weight: 600; margin-bottom: 0.5em;">Dash Chat</h1>
-      <div style="display: flex; justify-content: flex-end; margin: 0.25em 0 0.5em 0;">
-        <div aria-label="project stage" style="font-family: 'Rubik', sans-serif; font-weight: 600; font-size: 1.15em; padding: 6px 10px; background: #fff7ed; color: #7c2d12; border: 1px solid #fed7aa; border-radius: 8px; box-shadow: 0 1px 2px rgba(0,0,0,0.05);">
+      <div style="position: relative;">
+        <h1 style="font-family: 'Rubik', sans-serif; font-size: 1.8em; font-weight: 600; margin-bottom: 0.5em;">Dash Chat</h1>
+        <div aria-label="project stage" style="position: absolute; right: 0; top: 2px; font-family: 'Rubik', sans-serif; font-weight: 600; font-size: 1.15em; padding: 6px 10px; background: #fff7ed; color: #7c2d12; border: 1px solid #fed7aa; border-radius: 8px; box-shadow: 0 1px 2px rgba(0,0,0,0.05);">
           Now in Pre‑Alpha
         </div>
       </div>
