Intro: update 'Dash Chat is …' copy to emphasize e2e encryption, offline/online bridging (both pages)

--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -129,7 +129,7 @@
       </h2>
       <h3 style="font-family: 'Rubik', sans-serif; font-size: 1.3em; font-weight: 500; margin: 2em 0 1em 0; display: flex; align-items: center; gap: 0.5em;">Dash Chat is . . .</h3>
       <p>
-        a fully encrypted, secure messenger like Signal, that works with internet, and, when the internet goes out, Dash Chat still works as long as the devices it's on can talk to each other.
+        an end to end encrypted messenger that works with internet, without internet and bridges between the two. As long as there is a way for devices to communicate with each other, Dash Chat works.
       </p>
       <p>
         With internet shutdowns increasing worldwide, secure and reliable communication without dependence on stable internet is becoming ever more essential.
