Hero: enlarge title, tighten spacing, move status to below hero as 'Currently in Pre‑Alpha'; bold 'Dash Chat is…' (both pages)

--- a/dashchat.html
+++ b/dashchat.html
@@ -16,12 +16,9 @@
 
     <rocket-content-area>
       <div style="position: relative;">
-        <h1 style="font-family: 'Rubik', sans-serif; font-size: 1.8em; font-weight: 600; margin-bottom: 0.5em;">Dash Chat</h1>
-        <div aria-label="project stage" style="position: absolute; right: 0; top: 28px; font-family: 'Rubik', sans-serif; font-weight: 600; font-size: 1.28em; padding: 8px 12px; background: #fff7ed; color: #7c2d12; border: 1px solid #fed7aa; border-radius: 8px; box-shadow: 0 1px 2px rgba(0,0,0,0.08); transform: rotate(6deg); transform-origin: center;">
-          Pre‑Alpha
-        </div>
+        <h1 style="font-family: 'Rubik', sans-serif; font-size: 2.2em; font-weight: 600; margin-bottom: 0.2em;">Dash Chat</h1>
       </div>
-      <h2 style="font-family: 'Rubik', sans-serif; font-size: 1.4em; font-weight: 500; line-height: 1.4; padding-bottom: 40px; margin-bottom: 2em !important; text-align: center !important;">Secure chat,<br>
+      <h2 style="font-family: 'Rubik', sans-serif; font-size: 1.4em; font-weight: 500; line-height: 1.4; margin-top: 0.2em !important; padding-bottom: 40px; margin-bottom: 1.5em !important; text-align: center !important;">Secure chat,<br>
         <span aria-hidden="true" style="display: inline-block; margin: 0.25em 0; width: 100%; text-align: center;">
           <svg width="44" height="14" viewBox="0 0 44 14" role="img" aria-label="decorative separator">
             <circle cx="7" cy="7" r="6" fill="#10B981"/>
@@ -39,7 +36,10 @@
         </span><br>
         with or without internet
       </h2>
-      <h3 style="font-family: 'Rubik', sans-serif; font-size: 1.3em; font-weight: 500; margin: 2em 0 1em 0; display: flex; align-items: center; gap: 0.5em;">Dash Chat is . . .</h3>
+      <div style="display: flex; justify-content: center; margin: 0.4em 0 1.2em 0;">
+        <div aria-label="project stage" style="font-family: 'Rubik', sans-serif; font-weight: 600; font-size: 1.15em; padding: 8px 12px; background: #fff7ed; color: #7c2d12; border: 1px solid #fed7aa; border-radius: 8px;">Currently in Pre‑Alpha</div>
+      </div>
+      <h3 style="font-family: 'Rubik', sans-serif; font-size: 1.3em; font-weight: 700; margin: 2em 0 1em 0; display: flex; align-items: center; gap: 0.5em;">Dash Chat is . . .</h3>
       <p>
         an end to end encrypted messenger that works with internet, without internet and bridges between the two. As long as there is a way for devices to communicate with each other, Dash Chat works.
       </p>
