Dash Chat is: add unique icon; Stay Connected: left-align + new icon (remove mailbox). Mirror changes on clean-URL page

--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -127,7 +127,14 @@
       <div style="display: flex; justify-content: center; margin: 0.2em 0 1em 0;">
         <div aria-label="project stage" style="font-family: 'Rubik', sans-serif; font-weight: 600; font-size: 1.2em; padding: 8px 14px; background: #fff7ed; color: #7c2d12; border: 1px solid #fed7aa; border-radius: 8px;">Currently in Pre‑Alpha</div>
       </div>
-      <h3 style="font-family: 'Rubik', sans-serif; font-size: 1.3em; font-weight: 700; margin: 2em 0 1em 0; display: flex; align-items: center; gap: 0.5em;">Dash Chat is . . .</h3>
+      <h3 style="font-family: 'Rubik', sans-serif; font-size: 1.3em; font-weight: 700; margin: 2em 0 1em 0; display: flex; align-items: center; gap: 0.5em;">
+        <svg width="20" height="20" viewBox="0 0 20 20" aria-hidden="true" focusable="false">
+          <rect x="2" y="14" width="10" height="3" fill="#1D4ED8"/>
+          <circle cx="6" cy="6" r="4" fill="#10B981"/>
+          <polygon points="16,4 18,10 12,10" fill="#E11D48"/>
+        </svg>
+        Dash Chat is . . .
+      </h3>
       <p>
         an end to end encrypted messenger that works with internet, without internet and bridges between the two. As long as there is a way for devices to communicate with each other, Dash Chat works.
       </p>
