Refine: unique icon for 'Dash Chat is…'; Stay Connected left-aligned with new dot-link icon (both pages)

--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -58,15 +58,18 @@
 
       <h3 style="font-family: 'Rubik', sans-serif; font-size: 1.3em; font-weight: 500; margin: 2em 0 1em 0; display: flex; align-items: center; gap: 0.5em;">
         <svg width="20" height="20" viewBox="0 0 20 20" aria-hidden="true" focusable="false">
-          <rect x="3" y="4" width="14" height="10" rx="2" fill="#1D4ED8"/>
-          <polyline points="4,5 10,10 16,5" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          <circle cx="5" cy="10" r="3" fill="#1D4ED8"/>
+          <circle cx="15" cy="6" r="3" fill="#F59E0B"/>
+          <circle cx="15" cy="14" r="3" fill="#10B981"/>
+          <line x1="7.5" y1="9" x2="12.5" y2="7" stroke="#111" stroke-width="1.5"/>
+          <line x1="7.5" y1="11" x2="12.5" y2="13" stroke="#111" stroke-width="1.5"/>
         </svg>
         Stay Connected
       </h3>
       <form
         action="https://submit-form.com/x8wivjMPt"
         method="POST"
-        style="max-width: 400px; margin: 0.5em auto 2em auto; display: flex; flex-direction: column; gap: 0.75em;"
+        style="max-width: 400px; margin: 0.5em 0 2em 0; display: flex; flex-direction: column; gap: 0.75em;"
         id="stayConnectedForm"
       >
         <input type="email" id="email" name="email" required placeholder="Email*" style="padding: 0.5em; border: 1px solid #ccc; border-radius: 4px;">
