Add Community Partners section with Activate Rights; add Stay Connected jump button under hero; add Shoeb Abdullah (Activate Rights) to Advisors (both pages)

--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -219,6 +219,19 @@
       <div style="text-align: center; margin: 0 0 2em 0;">
         <img src="otf-logo.webp" alt="OTF UXD Lab Logo" style="max-width: 200px; width: 100%; height: auto; display: block; margin: 0 auto;" />
       </div>
+      
+      <h3 style="font-family: 'Rubik', sans-serif; font-size: 1.3em; font-weight: 500; margin: 2em 0 1em 0; display: flex; align-items: center; gap: 0.5em;">
+        <svg width="20" height="20" viewBox="0 0 20 20" aria-hidden="true" focusable="false">
+          <rect x="2" y="2" width="6" height="6" fill="#10B981"/>
+          <rect x="12" y="2" width="6" height="6" fill="#1D4ED8"/>
+          <rect x="7" y="12" width="6" height="6" fill="#F59E0B"/>
+        </svg>
+        Community Partners
+      </h3>
+      <div style="display:flex; align-items:center; gap: 12px; margin: 0 0 1.5em 0;">
+        <img src="activate-rights.png" alt="Activate Rights" style="height: 42px; width: auto;" />
+        <div style="font-weight: 600;">Activate Rights</div>
+      </div>
       <div style="border: 1px solid #e5e7eb; border-radius: 8px; padding: 16px; background: #fff; display: grid; gap: 18px;">
         <div>
           <div style="font-weight: 700; color: #F59E0B; display:flex; align-items:center; gap:6px; margin-bottom: 6px;">
@@ -613,6 +626,18 @@
             <div>
               <div style="font-weight: 600;">Scott Garrison</div>
               <div style="font-size: 0.9em; color: #666;">Disaster.Radio</div>
+            </div>
+          </div>
+          <div style="display: flex; align-items: center; gap: 0.75em;">
+            <div style="width: 40px; height: 40px; border-radius: 50%; background: #e9ecef; display:flex; align-items:center; justify-content:center;">
+              <svg width="22" height="22" viewBox="0 0 22 22" aria-hidden="true" focusable="false">
+                <circle cx="7" cy="7" r="5" fill="#10B981"/>
+                <rect x="12" y="12" width="8" height="8" fill="#1D4ED8"/>
+              </svg>
+            </div>
+            <div>
+              <div style="font-weight: 600;">Shoeb Abdullah</div>
+              <div style="font-size: 0.9em; color: #666;">Activate Rights</div>
             </div>
           </div>
         </div>
