--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -228,7 +228,7 @@
         </svg>
         Community Partners
       </h3>
-      <div style="display:flex; align-items:center; gap: 12px; margin: 0 0 1.5em 0;">
+      <div style="display:flex; align-items:center; justify-content:center; gap: 12px; margin: 0 0 1.5em 0; text-align: center;">
         <img src="activate-rights.png" alt="Activate Rights" style="height: 42px; width: auto;" />
         <div style="font-weight: 600;">Activate Rights</div>
       </div>
