Fix image paths on clean URL page: use ../activate-rights.png and ../shoeb.jpg

--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -229,7 +229,7 @@
         Community Partners
       </h3>
       <div style="display:flex; align-items:center; justify-content:center; gap: 12px; margin: 0 0 1.5em 0; text-align: center;">
-        <img src="activate-rights.png" alt="Activate Rights" style="height: 42px; width: auto;" />
+        <img src="../activate-rights.png" alt="Activate Rights" style="height: 42px; width: auto;" />
         <div style="font-weight: 600;">Activate Rights</div>
       </div>
       <div style="border: 1px solid #e5e7eb; border-radius: 8px; padding: 16px; background: #fff; display: grid; gap: 18px;">
@@ -629,12 +629,7 @@
             </div>
           </div>
           <div style="display: flex; align-items: center; gap: 0.75em;">
-            <div style="width: 40px; height: 40px; border-radius: 50%; background: #e9ecef; display:flex; align-items:center; justify-content:center;">
-              <svg width="22" height="22" viewBox="0 0 22 22" aria-hidden="true" focusable="false">
-                <circle cx="7" cy="7" r="5" fill="#10B981"/>
-                <rect x="12" y="12" width="8" height="8" fill="#1D4ED8"/>
-              </svg>
-            </div>
+            <img src="../shoeb.jpg" alt="Shoeb Abdullah" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover;" />
             <div>
               <div style="font-weight: 600;">Shoeb Abdullah</div>
               <div style="font-size: 0.9em; color: #666;">Activate Rights</div>
