Add Activate Rights and Shoeb images; ensure paths are correct

--- a/dashchat.html
+++ b/dashchat.html
@@ -40,9 +40,9 @@
         <div aria-label="project stage" style="font-family: 'Rubik', sans-serif; font-weight: 600; font-size: 1.2em; padding: 8px 14px; background: #fff7ed; color: #7c2d12; border: 1px solid #fed7aa; border-radius: 8px;">Currently in Pre‑Alpha</div>
       </div>
       <div style="display:flex; justify-content:center; margin: 0.1em 0 1.2em 0;">
-        <a href="#stay-connected" style="display:inline-block; padding: 10px 14px; border: 1px solid #1D4ED8; border-radius: 8px; color: #1D4ED8; background: #eef2ff; text-decoration: none; font-weight: 600;"
-          onmouseover="this.style.background='#1D4ED8'; this.style.color='#fff'"
-          onmouseout="this.style.background='#eef2ff'; this.style.color='#1D4ED8'"
+        <a href="#stay-connected" style="display:inline-block; padding: 10px 14px; border: 1px solid #1D4ED8; border-radius: 8px; color: #fff; background: #1D4ED8; text-decoration: none; font-weight: 600;"
+          onmouseover="this.style.background='#1E40AF'"
+          onmouseout="this.style.background='#1D4ED8'"
         >Stay Connected</a>
       </div>
       <h3 style="font-family: 'Rubik', sans-serif; font-size: 1.3em; font-weight: 700; margin: 2em 0 1em 0; display: flex; align-items: center; gap: 0.5em;">
@@ -222,9 +222,9 @@
 
         <div class="g-recaptcha" data-sitekey="6LfXWbYrAAAAAA0JyvaevQVvn_5YCQIkLDJPOKoL"></div>
 
-        <button type="submit" class="button" style="width: 100%; border: 1px solid #1D4ED8; background: #1D4ED8; color: #fff; border-radius: 8px; padding: 10px 12px; font-weight: 600;"
-          onmouseover="this.style.background='#1E40AF'"
-          onmouseout="this.style.background='#1D4ED8'"
+        <button type="submit" class="button" style="width: 100%; border: 1px solid #ccc; background: #f3f4f6; color: #111; border-radius: 8px; padding: 10px 12px; font-weight: 600;"
+          onmouseover="this.style.background='#1D4ED8'; this.style.color='#fff'; this.style.border='1px solid #1D4ED8'"
+          onmouseout="this.style.background='#f3f4f6'; this.style.color='#111'; this.style.border='1px solid #ccc'"
         >Connect</button>
       </form>
       <div id="formSuccess" style="display:none; max-width: 400px; margin: 0.5em 0 2em 0; padding: 16px; border: 1px solid #e5e7eb; border-radius: 8px; background: #f8fafc; color: #111; text-align: left;">
