Use underscore filename for Activate Rights logo to match repo (activate_rights.png)

--- a/dashchat.html
+++ b/dashchat.html
@@ -358,7 +358,7 @@
         Community Partners
       </h3>
       <div style="display:flex; align-items:center; justify-content:center; margin: 0 0 1.5em 0; text-align: center;">
-        <img src="activate-rights.png" alt="Activate Rights" style="height: 42px; width: auto;" />
+        <img src="activate_rights.png" alt="Activate Rights" style="height: 42px; width: auto;" />
       </div>
     </rocket-content-area>
 
