--- a/dashchat/index.html
+++ b/dashchat/index.html
@@ -229,7 +229,7 @@
         Community Partners
       </h3>
       <div style="display:flex; align-items:center; justify-content:center; gap: 12px; margin: 0 0 1.5em 0; text-align: center;">
-        <img src="../activate-rights.png" alt="Activate Rights" style="height: 42px; width: auto;" />
+        <img src="../activate_rights.png" alt="Activate Rights" style="height: 42px; width: auto;" />
         <div style="font-weight: 600;">Activate Rights</div>
       </div>
       <div style="border: 1px solid #e5e7eb; border-radius: 8px; padding: 16px; background: #fff; display: grid; gap: 18px;">
